.provarCaches/00D5h000009Q6XQEA0/objects/provar__Metadata_Component__c.object
<CustomObject>
    <fields>
        <fullName>provar__Developer_Name__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Has_Coverage__c</fullName>
        <formula>provar__Number_of_Test_Cases__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Metadata_Type__c</fullName>
        <label>Metadata Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Metadata_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Namespace_Prefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Number_of_Test_Cases__c</fullName>
        <label>Number of Test Cases</label>
        <summaryForeignKey>provar__Metadata_Component_Test_Case__c.provar__Metadata_Component__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Metadata Component</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Metadata_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>provar__All_Apex_Classes</fullName>
        <columns>NAME</columns>
        <columns>provar__Namespace_Prefix__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Metadata_Type__c</field>
            <operation>equals</operation>
            <value>ApexClass</value>
        </filters>
        <label>All Apex Classes</label>
    </listViews>
    <listViews>
        <fullName>provar__All_Apex_Triggers</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Metadata_Type__c</field>
            <operation>equals</operation>
            <value>ApexTrigger</value>
        </filters>
        <label>All Apex Triggers</label>
    </listViews>
    <listViews>
        <fullName>provar__All_Flows</fullName>
        <columns>NAME</columns>
        <columns>provar__Developer_Name__c</columns>
        <columns>provar__Namespace_Prefix__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Metadata_Type__c</field>
            <operation>equals</operation>
            <value>Flow</value>
        </filters>
        <label>All Flows</label>
    </listViews>
    <nameField>
        <label>Metadata Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>